--- a/WPF Panel logowania/WPF Panel logowania.csproj
+++ b/WPF Panel logowania/WPF Panel logowania.csproj
@@ -60,6 +60,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PanelAdministratora.xaml.cs">
+      <DependentUpon>PanelAdministratora.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PanelUzytkownika.xaml.cs">
       <DependentUpon>PanelUzytkownika.xaml</DependentUpon>
     </Compile>
@@ -81,6 +84,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PanelAdministratora.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PanelUzytkownika.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
