--- a/WPF Panel logowania/WPF Panel logowania.csproj
+++ b/WPF Panel logowania/WPF Panel logowania.csproj
@@ -68,6 +68,7 @@
     <Compile Include="PanelUzytkownika.xaml.cs">
       <DependentUpon>PanelUzytkownika.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Product.cs" />
     <Compile Include="Rejestracja.xaml.cs">
       <DependentUpon>Rejestracja.xaml</DependentUpon>
     </Compile>
